# root_dictionaries_tutorial

./: .gitignore  README.md
.github/workflows/: ci.yml
from_the_command_line_with_rootcling/: LinkDef.h  README.md
interactively_with_aclic/: README.md  twoints.hpp
with_cmake/: CMakeLists.txt  LinkDef.h  README.md  readwrite_twoints.cpp  twoints.cpp
